--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/PatrickWalter214/x-card-bot#readme",
   "dependencies": {
     "discord.js": "^13.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.15.0"
   }
 }
