--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/PatrickWalter214/x-card-bot#readme",
   "dependencies": {
+    "@discordjs/voice": "^0.9.0",
     "discord.js": "^13.7.0"
   },
   "devDependencies": {
