--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/PatrickWalter214/x-card-bot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.9.0",
-    "discord.js": "^13.7.0"
+    "discord.js": "^13.7.0",
+    "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.10"
   },
   "devDependencies": {
     "eslint": "^8.15.0"
